--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -94,13 +94,17 @@
 // ------------------Sección Videos------------------
 
 .videos {
+  position: relative;
   margin: 40px 0 100px 0;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   background-color: $color-primario-1;
+  &__cont-contenido {
+    margin-top: -50px;
+  }
   &__cont-titulo {
     margin: 0 auto 100px;
     width: fit-content;
@@ -114,7 +118,7 @@
     background-clip: text;
     color: transparent;
     background-size: 400%;
-    animation: color 5s infinite alternate;
+    animation: color 2s infinite alternate;
   }
   &__cont-vid {
     display: flex;
@@ -136,6 +140,49 @@
   100% {
     background-position: right;
   }
+}
+
+.custom-shape-divider-top-1684286448 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1684286448 svg {
+  position: relative;
+  display: block;
+  width: calc(273% + 1.3px);
+  height: 73px;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-top-1684286448 .shape-fill {
+  fill: #FFFFFF;
+}
+
+.custom-shape-divider-bottom-1684286415 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1684286415 svg {
+  position: relative;
+  display: block;
+  width: calc(273% + 1.3px);
+  height: 73px;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-bottom-1684286415 .shape-fill {
+  fill: #FFFFFF;
 }
 
 // ------------------Sección Fotos------------------
