--- a/css/styles.css
+++ b/css/styles.css
@@ -266,10 +266,42 @@ h4 {
   width: 100%;
   padding: 6.25rem 0;
 }
-.about__img {
-  border: 2px solid black;
+.about__person {
+  max-width: 15rem;
+  margin-inline: auto;
+  position: relative;
+  transform: scale(1.5);
+  margin-top: -150px;
+}
+.about__person-container {
+  aspect-ratio: 1/1.4;
+  display: grid;
+  align-items: end;
+  border-radius: 0 0 100vw 100vw;
+  overflow: hidden;
+  transition: transform 350ms ease;
+}
+.about__person-container:hover {
+  transform: scale(1.1);
+}
+.about__person-circle {
+  position: absolute;
+  inset: auto 0 0;
+  width: 100%;
+  aspect-ratio: 1/1;
   border-radius: 50%;
-  filter: drop-shadow(0 0 1px #000);
+  margin-inline: auto;
+  object-fit: cover;
+}
+.about__person-img {
+  position: relative;
+  z-index: 2;
+  right: 55px;
+  transform: scale(0.67);
+  transition: transform 250ms ease;
+}
+.about__person-container:hover .about__person-img {
+  transform: translateY(-0.8rem) scale(0.7);
 }
 .about__text {
   width: 550px;
@@ -410,7 +442,52 @@ h4 {
   height: 400px;
   object-fit: cover;
 }
+.fotos__wrapper {
+  width: 300px;
+  height: 300px;
+  margin: 120px auto;
+  perspective: 800px;
+  margin-bottom: 200px;
+}
+.fotos__box-area {
+  width: 300px;
+  animation: cubo 15s linear infinite;
+  transform-style: preserve-3d;
+}
+.fotos__box-area img {
+  height: 300px;
+  width: 300px;
+  object-fit: cover;
+  border: 2px solid #000;
+}
+.fotos__box-area div {
+  position: absolute;
+  height: 300px;
+  width: 300px;
+}
+.fotos__box1 {
+  transform: translateZ(100px);
+}
+.fotos__box2 {
+  transform: rotateY(180deg) translateZ(200px);
+}
+.fotos__box3 {
+  transform: rotateY(-90deg) translateX(-200px);
+  transform-origin: left;
+}
+.fotos__box4 {
+  transform: rotateY(90deg) translateX(200px);
+  transform-origin: right;
+}
 
+@keyframes cubo {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
 .publicidad {
   position: relative;
   margin-top: 100px;
