--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -52,11 +52,47 @@
   width: 100%;
   padding: 6.25rem 0;
 
-  &__img {
-    border: 2px solid black;
-    border-radius: 50%;
-    filter: drop-shadow(0 0 1px #000);
+&__person {
+  max-width: 15rem;
+  margin-inline: auto;
+  position: relative;
+  transform: scale(1.5);
+  margin-top: -150px;
+}
+
+&__person-container {
+  aspect-ratio: 1/1.4;
+  display: grid;
+  align-items: end;
+  border-radius: 0 0 100vw 100vw;
+  overflow: hidden;
+  transition: transform 350ms ease;
+  &:hover {
+    transform: scale(1.1);
   }
+}
+
+&__person-circle {
+  position: absolute;
+  inset: auto 0 0;
+  width: 100%;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  margin-inline: auto;
+  object-fit: cover;
+}
+
+&__person-img {
+  position: relative;
+  z-index: 2;
+  right: 55px;
+  transform: scale(0.67);
+  transition: transform 250ms ease;
+}
+
+&__person-container:hover .about__person-img {
+  transform: translateY(-.8rem) scale(0.7);
+}
 
   &__text {
     width: 550px;
@@ -202,6 +238,52 @@
       height: 400px;
       object-fit: cover;
     }
+  }
+  &__wrapper {
+    width: 300px;
+    height: 300px;
+    margin: 120px auto;
+    perspective: 800px;
+    margin-bottom: 200px;
+  }
+  &__box-area {
+    width: 300px;
+    animation: cubo 15s linear infinite;
+    transform-style: preserve-3d;
+    & img {
+      height: 300px;
+      width: 300px;
+      object-fit: cover;
+      border: 2px solid #000;
+    }
+    & div {
+      position: absolute;
+      height: 300px;
+      width: 300px;
+    }
+  }
+  &__box1 {
+    transform: translateZ(100px);
+  }
+  &__box2 {
+    transform: rotateY(180deg) translateZ(200px);
+  }
+  &__box3 {
+    transform: rotateY(-90deg) translateX(-200px);
+    transform-origin: left;
+  }
+  &__box4 {
+    transform: rotateY(90deg) translateX(200px);
+    transform-origin: right;
+  }
+}
+
+@keyframes cubo {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(360deg);
   }
 }
 
