--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: $color-primario-1;
-  width: 100vw;
+  width: 100%;
   height: auto;
   padding-top: 2.5rem;
   &__content {
@@ -48,7 +48,7 @@
   }
 
   &__bottom {
-    width: 100vw;
+    width: 100%;
     padding: 1.25rem 0;
     text-align: center;
     & p {
