--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -7,6 +7,7 @@
   padding: 10px 25px;
   border-radius: 30px;
   transition: transform .4s;
+  box-shadow: 1px 1px 5px 0 rgb(0, 0, 0, 0.5);
   &:hover {
     transform: scale(1.11);
     cursor: pointer;
