--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -250,6 +249,7 @@ h4 {
 }
 
 .portada {
+  position: relative;
   height: 110vh;
   display: flex;
   flex-direction: column;
@@ -258,24 +258,37 @@ h4 {
   background-image: url("../img/background.png");
   background-position: center;
   background-size: cover;
-}
-.portada__cont-titulo {
-  margin-top: -250px;
-  width: 21ch;
-  border-right: 0.1em solid black;
-  font-family: monospace;
-  font-weight: bold;
-  font-size: 4.5em;
-  animation: type 2.5s steps(20), writer 1s infinite alternate, delete 0.5s steps(5) 2.5s, type2 1s steps(4) 3s forwards, type3 3s steps(22, end) 6s forwards;
   overflow: hidden;
-  white-space: nowrap;
-  cursor: pointer;
 }
-.portada__cont-titulo::before {
-  content: "¡Hola! soy Adriana G";
-  animation: type2 1s steps(4) 3s forwards, type3 3s steps(22, end) 6s forwards;
+.portada__cont-type {
+  position: absolute;
+  left: 5%;
+  top: 20%;
 }
-.portada span {
+.portada__cont-type span {
+  font-size: 7vw;
+}
+.portada__multitext {
+  font-weight: bold;
+  text-transform: capitalize;
+  color: hsl(183, 100%, 36%);
+}
+.portada__frase {
+  margin: 120px 0 50px;
+  font-size: 1.75vw;
+  transform: translateX(-290px);
+  font-weight: 300;
+  color: rgba(77, 77, 77, 0.8980392157);
+  font-style: italic;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5019607843);
+  font-family: "Indie Flower", cursive;
+  letter-spacing: 5px;
+}
+.portada__frase span {
+  font-family: "Indie Flower", cursive;
+  font-weight: bold;
+}
+.portada__te-invito {
   background-color: hsl(183, 100%, 36%);
   padding: 1.5rem;
   border-radius: 50px;
@@ -285,15 +298,16 @@ h4 {
   opacity: 0;
   animation-name: appear;
   animation-duration: 3s;
-  animation-delay: 10s;
+  animation-delay: 1s;
   animation-fill-mode: forwards;
   box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.5);
+  transform: translateX(-250px) translateY(-50px);
 }
 .portada__arrow-container {
   margin-top: 50px;
   bottom: 20px;
   left: 50%;
-  transform: translateX(70%) rotate(45deg);
+  transform: translateX(-790%) translateY(-50px) rotate(45deg);
 }
 .portada__arrow {
   width: 30px;
@@ -302,62 +316,25 @@ h4 {
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
   animation: arrow-animation 2s infinite alternate;
-  animation-delay: 11.5s;
+  animation-delay: 1.5s;
   opacity: 0;
 }
 .portada__img {
-  width: 300px;
-  height: 300px;
+  width: 455px;
+  height: 455px;
   position: absolute;
+  border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
   bottom: 40px;
-  right: 200px;
+  right: 150px;
   opacity: 0;
-  animation: img-circle 2s forwards ease;
-  animation-delay: 12.5s;
+  background-image: url("../img/adri-muneco.jpg");
+  background-position: center;
+  background-size: cover;
+  animation: img-circle 2s forwards ease, movimiento-circulo 8s ease-in-out infinite;
+  animation-delay: 2s;
   filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.5));
 }
 
-@keyframes type {
-  from {
-    width: 0;
-  }
-  to {
-    width: 21ch;
-  }
-}
-@keyframes type2 {
-  from {
-    width: 16ch;
-    content: "¡Hola! soy Adriana. ";
-  }
-  to {
-    width: 20ch;
-    content: "¡Hola! soy Adriana. ";
-  }
-}
-@keyframes type3 {
-  from {
-    width: 20ch;
-    content: "¡Hola! soy Adriana. Bienvenido a mi página";
-  }
-  to {
-    width: 42ch;
-    content: "¡Hola! soy Adriana. Bienvenido a mi página";
-  }
-}
-@keyframes writer {
-  50% {
-    border-color: transparent;
-  }
-}
-@keyframes delete {
-  from {
-    width: 21ch;
-  }
-  to {
-    width: 16ch;
-  }
-}
 @keyframes appear {
   0% {
     opacity: 0;
@@ -385,11 +362,22 @@ h4 {
     opacity: 0;
   }
   75% {
-    transform: translateY(0);
+    transform: translateY(-195px);
   }
   100% {
     opacity: 1;
-    transform: translateY(-50px);
+    transform: translateY(-240px);
+  }
+}
+@keyframes movimiento-circulo {
+  0% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+  50% {
+    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+  }
+  100% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
   }
 }
 .about {
@@ -468,7 +456,7 @@ h4 {
 }
 .about__socials {
   position: absolute;
-  top: 30%;
+  top: 37.5%;
   width: 125px;
   height: 225px;
   box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.4);
@@ -509,7 +497,7 @@ h4 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: linear-gradient(45deg, hsl(4, 82%, 17%), hsl(4, 82%, 67%));
+  background: linear-gradient(45deg, hsl(183, 100%, 13%), hsl(183, 100%, 36%));
 }
 .videos__cont-contenido {
   margin-top: -70px;
@@ -786,17 +774,17 @@ h4 {
   background-image: url("../img/16.jpg");
   background-position: center;
   background-size: cover;
-  margin: 125px 0 100px 0;
-  padding: 150px 0 750px;
-  height: 150vh;
+  margin: 125px 0 0;
+  padding: 150px 0 200px;
+  min-height: 150vh;
 }
 .audioteca__cont-img-texto {
   display: flex;
   justify-content: center;
 }
 .audioteca__cont-img-texto img {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   float: left;
   shape-outside: ellipse(50% 50%);
   margin-right: 1rem;
@@ -805,16 +793,16 @@ h4 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 200px;
+  margin-bottom: 150px;
 }
 .audioteca__texto .videos__cont-titulo {
   margin: 0 0 80px;
 }
 .audioteca__texto article {
-  width: 40%;
+  width: 50%;
 }
 .audioteca__texto article h3 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   margin-bottom: 15px;
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5333333333);
 }
