--- a/css/styles.css
+++ b/css/styles.css
@@ -87,35 +87,53 @@ h4 {
   background: #fff;
 }
 
-.card, .card--7, .card--6, .card--5, .card--4, .card--3, .card--2 {
+.card, .card--9, .card--8, .card--7, .card--6, .card--5, .card--4, .card--3, .card--2 {
   width: 252px;
-  height: 265px;
+  height: 245px;
   background: white;
   border-radius: 30px;
   box-shadow: 15px 15px 30px #bebebe, -15px -15px 30px #ffffff;
   transition: 0.2s ease-in-out;
+  order: 2;
 }
-.card:hover, .card--7:hover, .card--6:hover, .card--5:hover, .card--4:hover, .card--3:hover, .card--2:hover {
+.card img, .card--9 img, .card--8 img, .card--7 img, .card--6 img, .card--5 img, .card--4 img, .card--3 img, .card--2 img {
+  object-fit: cover;
+}
+.card:hover, .card--9:hover, .card--8:hover, .card--7:hover, .card--6:hover, .card--5:hover, .card--4:hover, .card--3:hover, .card--2:hover {
   cursor: pointer;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
 }
 .card--2 {
   height: 590px;
+  order: 7;
 }
 .card--3 {
-  height: 420px;
+  height: 412px;
+  order: 4;
 }
 .card--4 {
-  height: 510px;
+  height: 490px;
+  order: 5;
 }
 .card--5 {
   height: 570px;
+  order: 8;
 }
 .card--6 {
   height: 700px;
+  order: 9;
 }
 .card--7 {
-  height: 480px;
+  height: 382px;
+  order: 3;
+}
+.card--8 {
+  height: 580px;
+  order: 6;
+}
+.card--9 {
+  height: 240px;
+  order: 1;
 }
 
 .img, .img--2 {
@@ -885,8 +903,8 @@ h4 {
   padding-top: 7rem;
   padding-bottom: 100px;
 }
-.publicidad__titulo {
-  text-align: center;
+.publicidad .videos__cont-titulo {
+  margin-bottom: 0;
 }
 .publicidad__cont-tarj {
   width: 100%;
