--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -47,7 +47,7 @@
     left: 5%;
     top: 20%;
     span {
-      font-size: 7vw;
+      font-size: 6.25vw;
     }
   }
   &__multitext {
@@ -170,9 +170,16 @@
 // ------------------Seccion About us------------------
 
 .about {
+  background-image: url("../img/img-flor.png");
+  background-repeat: no-repeat;
+  background-size: 1000px;
+  background-position: 920px -20px;
   width: 100%;
   padding: 13.25rem 0;
   position: relative;
+  &__main {
+    transform: translateX(-170px);
+  }
 &__person {
   max-width: 15rem;
   margin-inline: auto;
@@ -246,12 +253,30 @@
   & a {
     @include a;
   }
+  &__cont-btn-texto {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    color: #5a5a5acc;
+    span {
+      text-align: center;
+      font-style: italic;
+      font-size: 1rem;
+      font-family: 'Indie Flower', cursive;
+      strong {
+        font-family: 'Indie Flower', cursive;
+        font-style: normal;
+      }
+    }
+    button {
+      min-width: 238px;
+    }
+  }
   &__socials {
     position: absolute;
     top: 37.5%;
-    width: 125px;
+    width: 80px;
     height: 225px;
-    box-shadow: 2px 2px 8px 0 rgba(0,0,0,.4);
     ul {
       display: flex;
       flex-direction: column;
@@ -261,6 +286,13 @@
       list-style: none;
       border-bottom: 1px solid rgba(0,0,0,.4);
       height: 75px;
+      box-shadow: 2px 2px 8px 0 rgba(0,0,0,.4);
+      &:first-child {
+        border-top-right-radius: 30px;
+      }
+      &:last-child {
+        border-bottom-right-radius: 30px;
+      }
     }
     a {
       color: #fff;
@@ -279,6 +311,31 @@
   }
   &__socials-facebook:hover,.about__socials-youtube:hover,.about__socials-instagram:hover {
     filter: brightness(115%);
+  }
+  &__body-flechas {
+    display: flex;
+    justify-content: center;
+    transform: translateY(120px);
+  }
+  &__cont-flechas {
+    span {
+      display: block;
+      width: 40px;
+      height: 40px;
+      border-bottom: 3px solid #0000004d;
+      border-right: 3px solid #0000004d;
+      border-radius: 8px;
+      transform: rotate(45deg);
+      margin: -10px;
+      animation: animatte-arrow 2s infinite;
+      &:nth-child(2) {
+        animation-delay: -0.2s;
+        transform: rotate(45deg) translate(-20px, -20px);
+      }
+      &:nth-child(3) {
+        animation-delay: -0.4s;
+      }
+    }
   } 
 }
 
@@ -292,9 +349,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: -20;
   background: linear-gradient(45deg,hsl(183, 100%, 13%), $color-primario-4);
   &__cont-contenido {
     margin-top: -70px;
+    z-index: -10;
   }
   &__cont-titulo {
     margin: 0 auto 100px;
@@ -313,8 +372,13 @@
     background-size: 400%;
     animation: color 2s infinite alternate;
   }
-
-
+  &__sticker-adri {
+    position: absolute;
+    width: 175px;
+    z-index: -5;
+    top: 150px;
+    left: 175px;
+  }
   &__cont-vid {
     display: flex;
     justify-content: space-evenly;
@@ -394,13 +458,74 @@
 // ------------------Sección Fotos------------------
 
 .fotos {
+  position: relative;
   padding-top: 7rem;
   width: 100%;
   margin-bottom: 100px;
   height: 255vh;
-  &__titulo {
-    text-align: center;
-    margin-bottom: 50px;
+  & .videos__cont-titulo {
+    margin-bottom: 30px;
+  }
+  &__dicho {
+    position: absolute;
+    width: 350px;
+    top: 300px;
+    left: 165px;
+    font-size: 1.2rem;
+    line-height: 2.3rem;
+    font-weight: 300;
+    color: #4d4d4de5;
+    font-style: italic;
+    text-shadow: 1px 1px 1px #00000080;
+    font-family: 'Indie Flower', cursive;
+    letter-spacing: 5px;
+    span {
+      font-family: 'Indie Flower', cursive;
+      font-weight: bold;
+    }
+  }
+  &__dicho-2 {
+    position: absolute;
+    width: 350px;
+    top: 1034px;
+    right: 165px;
+    font-size: 1.2rem;
+    line-height: 2.3rem;
+    font-weight: 300;
+    color: #4d4d4de5;
+    font-style: italic;
+    text-shadow: 1px 1px 1px #00000080;
+    font-family: 'Indie Flower', cursive;
+    letter-spacing: 5px;
+    span {
+      font-family: 'Indie Flower', cursive;
+      font-weight: bold;
+    }
+  }
+  &__giff-camara {
+    position: absolute;
+    top: 348px;
+    right: 180px;
+    transform: rotate(5deg);
+    object-fit: cover;
+    border-radius:  60% 40% 30% 70% / 60% 30% 70% 40%;
+    border: 1px solid rgba(0, 0, 0, 0.479);
+    box-shadow: 2px 2px 5px #00000081;
+    width: 270px;
+    height: 225px;
+    animation: movimiento-circulo 8s ease-in-out infinite;
+  }
+  &__giff-camara-2 {
+    position: absolute;
+    object-fit: cover;
+    top: 844px;
+    left: 135px;
+    border-radius:  43% 57% 71% 29% / 38% 60% 40% 62%    ;
+    border: 1px solid rgba(0, 0, 0, 0.479);
+    width: 340px;
+    height: 255px;
+    box-shadow: 2px 2px 5px #00000081;
+    animation: movimiento-circulo 8s ease-in-out infinite;
   }
   &__fondo-cubo {
     background-image: url("../img/5.jpg");
@@ -408,9 +533,13 @@
     background-position: center;
     background-attachment: fixed;
     width: 100%;
-    margin-bottom: 350px;
+    margin-bottom: 300px;
+    margin-top: 300px;
+    height: 450px;
   }
   &__wrapper {
+    position: relative;
+    top: 75px;
     width: 300px;
     height: 300px;
     margin: 200px auto 250px;
@@ -446,6 +575,16 @@
   &__box4 {
     transform: rotateY(90deg) translateX(200px);
     transform-origin: right;
+  }
+  &__cont-h3-expandible {
+    margin-bottom: 70px;
+    transform: translateX(250px);
+    width: fit-content;
+    padding-right: .5rem;
+    box-shadow: rgb(0, 174, 184,.4) 5px 5px, rgb(0, 174, 184,.3) 10px 10px, rgb(0, 174, 184,.2) 15px 15px, rgb(0, 174, 184,.1) 20px 20px, rgb(0, 174, 184,.05) 25px 25px;
+    h3 {
+      font-size: 3rem;
+    }
   }
   &__container {
     margin: 0 auto;
@@ -512,18 +651,43 @@
   &__item-5 { 
     background-image: url('https://images.unsplash.com/photo-1503602642458-232111445657?auto=format&fit=crop&w=1234&q=80');
   }
+  &__cont-subtitulo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    transform: translateY(80px);
+    h3 {
+      font-size: 3rem;
+    }
+    span {
+      font-size: 1.4rem;
+      font-weight: 300;
+      color: #4d4d4de5;
+      font-style: italic;
+      text-shadow: 1px 1px 1px #00000080;
+      font-family: 'Indie Flower', cursive;
+      letter-spacing: 5px;
+      transform: translateY(15px);
+    }
+  }
   &__fondo-slider {
     background-image: url("../img/8.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    --mask: 
+    conic-gradient(from 132.5deg at top,#0000,#000 1deg 94deg,#0000 95deg) top/32.74px 51% repeat-x,
+    conic-gradient(from -47.5deg at bottom,#0000,#000 1deg 94deg,#0000 95deg) bottom/32.74px 51% repeat-x;
+  -webkit-mask: var(--mask);
+          mask: var(--mask);
   }
   &__body-slider {
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    height: 500px;
+    height: 600px;
     transform: scale(1.3);
     width: 1200px;
     margin: 175px auto 0;
@@ -569,6 +733,20 @@
   }
 }
 
+@keyframes animatte-arrow {
+  0% {
+    opacity: 0;
+    transform: rotate(45deg) translate(-20px, -20px);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(45deg) translate(20px, 20px);
+  }
+}
+
 @keyframes rotate {
   0% {
     transform: perspective(1000px) rotate(0deg);
@@ -585,7 +763,7 @@
   background-image: url("../img/16.jpg");
   background-position: center;
   background-size: cover;
-  margin: 125px 0 0 ;
+  margin: 750px 0 0 ;
   padding: 150px 0 200px;
   min-height: 150vh;
   &__cont-img-texto {
@@ -612,12 +790,20 @@
       h3 {
         font-size: 2.5rem;
         margin-bottom: 15px;
-        text-shadow: 1px 1px 5px #00000088;
+        text-shadow: 1px 1px 5px #00000044;
       }
       p {
         font-size: 1.5rem;
+        color: #5c5c5c;
       }
     }
+  }
+  &__sticker {
+    z-index: 10;
+    width: 200px;
+    position: absolute;
+    top: 696px;
+    right: 180px;
   }
   &__cont-players {
     display: flex;
@@ -701,6 +887,12 @@
   & .videos__cont-titulo {
     margin-bottom: 0;
   }
+  &__fondo-chispas {
+    width: 100%;
+    position: absolute;
+    top: 465px;
+    z-index: -10;
+  }
   &__cont-tarj {
     width: 100%;
     display: flex;
@@ -735,5 +927,5 @@
 }
 
 .custom-shape-divider-bottom-1684252060 .shape-fill {
-  fill: #F06F66;
+  fill: $color-primario-4;
 }
